Fix header styling, especially on mobile

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -48,10 +48,26 @@ $darkgray2: #222;
   }
   .post-title {
     text-align: center;
+    font-size: 2.6rem;
   }
   .post-date {
     padding: 0.2em;
     text-align: center;
+  }
+  h2 {
+    font-size: 2.2rem;
+  }
+  h3 {
+    font-size: 2.0rem;
+  }
+  h4 {
+    font-size: 1.8rem;
+  }
+  h5 {
+    font-size: 1.6rem;
+  }
+  h6 {
+    font-size: 1.4rem;
   }
 }
 
@@ -74,9 +90,27 @@ $darkgray2: #222;
     margin-top: -84px;
     height: 84px;
   }
+  .post-title {
+    font-size: 2.0rem;
+  }
   .post-date {
     padding: 0.5em;
     text-align: center;
+  }
+  h2 {
+    font-size: 1.8rem;
+  }
+  h3 {
+    font-size: 1.6rem;
+  }
+  h4 {
+    font-size: 1.5rem;
+  }
+  h5 {
+    font-size: 1.4rem;
+  }
+  h6 {
+    font-size: 1.3rem;
   }
 }
 
